[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = "huffman_coding"
version = "0.0.1"
authors = [
  { name="Vicente González Ruiz", email="vicente.gonzalez.ruiz@gmail.com" },
]
description = "Huffman coding."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vicente-gonzalez-ruiz/huffman_coding"
"Bug Tracker" = "https://github.com/vicente-gonzalez-ruiz/huffman_coding/issues"

#[tool.hatch.build.targets.wheel]
#packages = ["huffman_coding"]
